# Plazza

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  main_plazza.cpp  peda-session-plazza.txt  plazza  test.txt
ast/: Makefile
ast/include/: AstParse.hpp  GraphReader.hpp
ast/mk/: local_defs.mk
ast/src/: AstParse.cpp  GraphReader.cpp
cipher_manager/: Makefile
cipher_manager/include/: ACipher.hpp  CesarCipher.hpp  XORCipher.hpp
cipher_manager/mk/: local_defs.mk
cipher_manager/src/: ACipher.cpp  CesarCipher.cpp  XORCipher.cpp
command_generator/: Makefile
command_generator/include/: CommandGenerator.hpp  Splitter.hpp
command_generator/mk/: local_defs.mk
command_generator/src/: CommandGenerator.cpp  Splitter.cpp
communication/socket/: Makefile
communication/socket/include/: Socket.hpp
communication/socket/mk/: local_defs.mk
communication/socket/src/: Socket.cpp
communication/socket_internet/: Makefile
communication/socket_internet/include/: SocketInternet.hpp
communication/socket_internet/mk/: local_defs.mk
communication/socket_internet/src/: SocketInternet.cpp
core/: Makefile  main_plazza_gui.cpp
core/include/: Core.hpp  Forker.hpp  ProcessManager.hpp
core/mk/: local_defs.mk
core/src/: Core.cpp  CoreGui.cpp  ProcessManager.cpp  Timer.cpp  main_plazza.cpp  main_plazza_gui.cpp
file_scrapper/: Makefile
file_scrapper/include/: FileReader.hpp  FileScrapper.hpp  RegexParser.hpp
file_scrapper/mk/: local_defs.mk
file_scrapper/src/: FileReader.cpp  FileScrapper.cpp  RegexParser.cpp
files/: lol.txt_1  lol.txt_2  test.txt_1
gui/: Makefile
gui/include/: Core.hpp  CoreGui.hpp  GUI.hpp  NoGUI.hpp
gui/mk/: local_defs.mk
gui/src/: Core.cpp  GUI.cpp  NoGUI.cpp  main.cpp~  test
interfaces/: AGraph.hpp  Enums.hpp  ICipher.hpp  ICommunication.hpp  ICore.hpp  main.cpp
logger/: Makefile
logger/include/: Logger.hpp
logger/mk/: local_defs.mk
logger/src/: Logger.cpp
mk/: defs.mk  local_defs.mk  rules.mk
thread_pool/include/: SafeQ.hpp  ThreadPool.hpp
unit-tests/: Makefile  log
unit-tests/cipher_manager/: Cipher_test.cpp  Cipher_test.hpp
unit-tests/command_generator/: command_generator_test.cpp
unit-tests/file_scrapper/: fileToReadTest.txt  file_scrapper_tests.cpp
unit-tests/googletest/include/gtest/internal/: gtest-death-test-internal.h.gch  gtest-port-arch.h.gch
unit-tests/googletest/make/: sample1_unittest
unit-tests/graph/: graph_test.cpp  graph_test.hpp
unit-tests/splitter/: splitter_test.cpp
unit-tests/thread_pool/: thread_pool_tests.cpp
